* Fix align for peers rate. refs #13
git-svn-id: file:///mnt/system/svn/rtpg@33 537be8b9-7409-4e55-acc4-1b29d7baf169

--- a/trunk/htdocs/skins/default/prop.css
+++ b/trunk/htdocs/skins/default/prop.css
@@ -221,6 +221,10 @@ div.properties table.peers_list tbody td.up_speed {
     text-align: right;
 }
 
+div.properties table.peers_list tbody td.peer_rate {
+    text-align: right;
+}
+
 div.properties table.peers_list tbody td.peer_total {
     text-align: right;
 }
